testdata/baselines/reference/submodule/conformance/typeTagModuleExports.errors.txt
bug27327.js(2,18): error TS2352: Conversion of type 'number' to type 'string' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.


==== bug27327.js (1 errors) ====
    /** @type {string} */
    module.exports = 0;
                     ~
!!! error TS2352: Conversion of type 'number' to type 'string' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.
    